@@ -6,6 +6,8 @@
 	  z80 peephole optimizer rule improvements.
 	* src/z80/gen.c:
 	  Improve use of information from generalized constant propagation in z80 subtraction code generation.
+	* src/SDCCopt.c:
+	  Optimize out a few more casts, part of RFE #937.
 
 2024-10-27 Philipp Klaus Krause <philipp@colecovision.eu>
 
